--- a/docs/src/components/Footer/styles.module.css
+++ b/docs/src/components/Footer/styles.module.css
@@ -1,13 +1,12 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
-.heroBanner {
-  padding: 4rem 0;
+.copyright {
   text-align: center;
-  position: relative;
-  overflow: hidden;
+  padding: 8px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.69);
+}
+
+.copyright a {
+  color: #fff !important;
 }
 
 .heroText {
@@ -18,20 +17,7 @@
   font-size: 48px;
 }
 
-.heroLeft {
-  margin-top: 250px;
-}
-
 @media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-
-  .heroLeft {
-    margin-top: 320px;
-    text-align: center;
-  }
-
   .heroText {
     text-align: center;
     font-size: 36px;
@@ -49,13 +35,9 @@
   transform: rotateZ(359deg);
 }
 
-.buttons {
+.footerInner {
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.bg {
-  width: 100%;
-  height: 100vh;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
 }
